Prepare for production

--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,9 @@
 export DJANGO_SECRET_KEY="ympr^oisgreatme+uvtthispxgpd7v*j4u43!pf0nho++a7k2-thme2w(h-5a"
 export ENV="DEV"
+
+# Change Database config. below for production
+export DB_NAME=""
+export DB_USER=""
+export DB_PASS=""
+
+export STATIC_FILES=""
