--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-crispy-forms==1.7.2
 idna==2.8
 oauthlib==3.1.0
 PyJWT==1.7.1
+python-dotenv==0.10.3
 python3-openid==3.1.0
 pytz==2019.2
 requests==2.22.0
