--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ defusedxml==0.6.0
 Django==2.2.6
 django-allauth==0.40.0
 django-crispy-forms==1.7.2
+gunicorn==19.9.0
 idna==2.8
 oauthlib==3.1.0
 PyJWT==1.7.1
