--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-allauth==0.40.0
 django-crispy-forms==1.7.2
 idna==2.8
 oauthlib==3.1.0
+Pillow==6.2.0
 PyJWT==1.7.1
 python-dotenv==0.10.3
 python3-openid==3.1.0
