--- a/.env.dev
+++ b/.env.dev
@@ -7,3 +7,8 @@ export DB_USER=""
 export DB_PASS=""
 
 export STATIC_FILES=""
+
+# Payment Credentials
+export API_AUTH_KEY=""
+export API_AUTH_TOKEN=""
+export PRIVATE_SALT=""
