Remove extra media images and add instamojo requirements

--- a/.env.dev
+++ b/.env.dev
@@ -12,3 +12,7 @@ export STATIC_FILES=""
 export API_AUTH_KEY=""
 export API_AUTH_TOKEN=""
 export PRIVATE_SALT=""
+
+# Email config
+export EMAIL_HOST_USER=""
+export EMAIL_HOST_PASSWORD=""
