--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==2.2.6
 django-allauth==0.40.0
 django-crispy-forms==1.7.2
 idna==2.8
+instamojo-wrapper==1.2.0
 oauthlib==3.1.0
 Pillow==6.2.0
 PyJWT==1.7.1
