Workshops Modified and payment credentials changed to that of Diginique

--- a/.env.dev
+++ b/.env.dev
@@ -13,6 +13,11 @@ export API_AUTH_KEY=""
 export API_AUTH_TOKEN=""
 export PRIVATE_SALT=""
 
+# Diginique Payment Credentials
+export WORKSHOP_API_AUTH_KEY="3c597a669ca59ddd830ef6598799835c"
+export WORKSHOP_API_AUTH_TOKEN="c5f188c766bd08c14882fc37a52474d9"
+export WORKSHOP_PRIVATE_SALT="b6a255549fcc4f4387f246979f94592e"
+
 # Email config
 export EMAIL_HOST_USER=""
 export EMAIL_HOST_PASSWORD=""
