TechConnect Centers add

--- a/.env.dev
+++ b/.env.dev
@@ -22,4 +22,4 @@ export WORKSHOP_PRIVATE_SALT=""
 export EMAIL_HOST_USER=""
 export EMAIL_HOST_PASSWORD=""
 
-export ACCOMODATION_FEE="250"
+export ACCOMODATION_FEE=""
