--- a/.env.dev
+++ b/.env.dev
@@ -22,4 +22,5 @@ export WORKSHOP_PRIVATE_SALT=""
 export EMAIL_HOST_USER=""
 export EMAIL_HOST_PASSWORD=""
 
-export ACCOMODATION_FEE=""
+export WORKSHOP_ACCOMODATION_FEE=""
+export ACCOMMODATION_FEE="400"
