improve talks UI

--- a/.env.dev
+++ b/.env.dev
@@ -23,4 +23,4 @@ export EMAIL_HOST_USER=""
 export EMAIL_HOST_PASSWORD=""
 
 export WORKSHOP_ACCOMODATION_FEE=""
-export ACCOMMODATION_FEE="400"
+export ACCOMMODATION_FEE=""
