--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
           source advitiya20env/bin/activate
           cd Advitiya-20/
           source .env
-          python manage.py collectstatic
+          echo "yes" | python manage.py collectstatic
