--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,5 @@ jobs:
           source advitiya20env/bin/activate
           cd Advitiya-20/
           source .env
-          echo "yes" | python manage.py collectstatic
+          git pull source production
+          #echo "yes" | python manage.py collectstatic
